@@ -58,8 +58,8 @@ public class BenchmarkTest00119 extends HttpServlet {
 		map8142.put("key8142", b8142.toString()); // put in a collection
 		String c8142 = (String)map8142.get("key8142"); // get it back out
 		String d8142 = c8142.substring(0,c8142.length()-1); // extract most of it
-		String e8142 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d8142.getBytes() ) )); // B64 encode and decode it
+		String e8142 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d8142.getBytes() ) )); // B64 encode and decode it
 		String f8142 = e8142.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f8142); // reflection
