@@ -3,7 +3,7 @@
 *
 * This file is part of the Open Web Application Security Project (OWASP)
 * Benchmark Project. For details, please see
-* <a href="https://www.owasp.org/index.php/Benchmark">https://www.owasp.org/index.php/Benchmark</a>.
+* <a href="https://owasp.org/www-project-benchmark/">https://owasp.org/www-project-benchmark/</a>.
 *
 * The OWASP Benchmark is free software: you can redistribute it and/or modify it under the terms
 * of the GNU General Public License as published by the Free Software Foundation, version 2.
@@ -12,7 +12,7 @@
 * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
-* @author Nick Sanidas <a href="https://www.aspectsecurity.com">Aspect Security</a>
+* @author Nick Sanidas
 * @created 2015
 */
 
@@ -53,8 +53,8 @@ public class BenchmarkTest00367 extends HttpServlet {
 		map12849.put("key12849", b12849.toString()); // put in a collection
 		String c12849 = (String)map12849.get("key12849"); // get it back out
 		String d12849 = c12849.substring(0,c12849.length()-1); // extract most of it
-		String e12849 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d12849.getBytes() ) )); // B64 encode and decode it
+		String e12849 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d12849.getBytes() ) )); // B64 encode and decode it
 		String f12849 = e12849.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g12849 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
@@ -69,9 +69,10 @@ public class BenchmarkTest00367 extends HttpServlet {
 		sc.setSearchScope(javax.naming.directory.SearchControls.SUBTREE_SCOPE);
 		String filter = "(&(objectclass=person))(|(uid="+bar+")(street={0}))";
 		Object[] filters = new Object[]{"The streetz 4 Ms bar"};
-		
+
 		javax.naming.directory.DirContext ctx = ads.getDirContext();
 		javax.naming.directory.InitialDirContext idc = (javax.naming.directory.InitialDirContext) ctx;
+		boolean found = false;
 		javax.naming.NamingEnumeration<javax.naming.directory.SearchResult> results = 
 				idc.search(base, filter,filters, sc);
 		while (results.hasMore()) {
@@ -82,24 +83,28 @@ public class BenchmarkTest00367 extends HttpServlet {
 			javax.naming.directory.Attribute attr2 = attrs.get("street");
 			if (attr != null){
 				response.getWriter().println(
-"LDAP query results:<br>"
-						+ " Record found with name " + attr.get() + "<br>"
-								+ "Address: " + attr2.get()+ "<br>"
-);
+					"LDAP query results:<br>"
+					+ "Record found with name " + attr.get() + "<br>"
+					+ "Address: " + attr2.get()+ "<br>"
+				);
 				// System.out.println("record found " + attr.get());
-			} else response.getWriter().println(
-"LDAP query results: nothing found."
-);
+				found = true;
+			}
+		}
+		if (!found) {
+			response.getWriter().println(
+				"LDAP query results: nothing found for query: " + org.owasp.esapi.ESAPI.encoder().encodeForHTML(filter)
+			);
 		}
 	} catch (javax.naming.NamingException e) {
 		throw new ServletException(e);
-	}finally{
-    	try {
-    		ads.closeDirContext();
+	} finally {
+    		try {
+    			ads.closeDirContext();
 		} catch (Exception e) {
 			throw new ServletException(e);
 		}
-    }
+	}
 	}
 	
 }
