@@ -53,8 +53,8 @@ public class BenchmarkTest00411 extends HttpServlet {
 		map18204.put("key18204", b18204.toString()); // put in a collection
 		String c18204 = (String)map18204.get("key18204"); // get it back out
 		String d18204 = c18204.substring(0,c18204.length()-1); // extract most of it
-		String e18204 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d18204.getBytes() ) )); // B64 encode and decode it
+		String e18204 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d18204.getBytes() ) )); // B64 encode and decode it
 		String f18204 = e18204.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g18204 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
