@@ -54,8 +54,8 @@ public class BenchmarkTest00621 extends HttpServlet {
 		map28566.put("key28566", b28566.toString()); // put in a collection
 		String c28566 = (String)map28566.get("key28566"); // get it back out
 		String d28566 = c28566.substring(0,c28566.length()-1); // extract most of it
-		String e28566 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d28566.getBytes() ) )); // B64 encode and decode it
+		String e28566 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d28566.getBytes() ) )); // B64 encode and decode it
 		String f28566 = e28566.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g28566 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
