@@ -56,8 +56,8 @@ public class BenchmarkTest00717 extends HttpServlet {
 		map59129.put("key59129", b59129.toString()); // put in a collection
 		String c59129 = (String)map59129.get("key59129"); // get it back out
 		String d59129 = c59129.substring(0,c59129.length()-1); // extract most of it
-		String e59129 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d59129.getBytes() ) )); // B64 encode and decode it
+		String e59129 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d59129.getBytes() ) )); // B64 encode and decode it
 		String f59129 = e59129.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g59129 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
