@@ -67,8 +67,8 @@ public class BenchmarkTest00805 extends HttpServlet {
 		map72616.put("key72616", b72616.toString()); // put in a collection
 		String c72616 = (String)map72616.get("key72616"); // get it back out
 		String d72616 = c72616.substring(0,c72616.length()-1); // extract most of it
-		String e72616 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d72616.getBytes() ) )); // B64 encode and decode it
+		String e72616 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d72616.getBytes() ) )); // B64 encode and decode it
 		String f72616 = e72616.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f72616); // reflection
