@@ -86,8 +86,8 @@ public class BenchmarkTest01109 extends HttpServlet {
 		map87030.put("key87030", b87030.toString()); // put in a collection
 		String c87030 = (String)map87030.get("key87030"); // get it back out
 		String d87030 = c87030.substring(0,c87030.length()-1); // extract most of it
-		String e87030 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d87030.getBytes() ) )); // B64 encode and decode it
+		String e87030 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d87030.getBytes() ) )); // B64 encode and decode it
 		String f87030 = e87030.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g87030 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
