@@ -99,8 +99,8 @@ public class BenchmarkTest01114 extends HttpServlet {
 		map97099.put("key97099", b97099.toString()); // put in a collection
 		String c97099 = (String)map97099.get("key97099"); // get it back out
 		String d97099 = c97099.substring(0,c97099.length()-1); // extract most of it
-		String e97099 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d97099.getBytes() ) )); // B64 encode and decode it
+		String e97099 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d97099.getBytes() ) )); // B64 encode and decode it
 		String f97099 = e97099.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g97099 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
