@@ -99,8 +99,8 @@ public class BenchmarkTest01115 extends HttpServlet {
 		map43762.put("key43762", b43762.toString()); // put in a collection
 		String c43762 = (String)map43762.get("key43762"); // get it back out
 		String d43762 = c43762.substring(0,c43762.length()-1); // extract most of it
-		String e43762 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d43762.getBytes() ) )); // B64 encode and decode it
+		String e43762 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d43762.getBytes() ) )); // B64 encode and decode it
 		String f43762 = e43762.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g43762 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
