@@ -130,8 +130,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map58606.put("key58606", b58606.toString()); // put in a collection
 		String c58606 = (String)map58606.get("key58606"); // get it back out
 		String d58606 = c58606.substring(0,c58606.length()-1); // extract most of it
-		String e58606 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d58606.getBytes() ) )); // B64 encode and decode it
+		String e58606 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d58606.getBytes() ) )); // B64 encode and decode it
 		String f58606 = e58606.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g58606 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
