@@ -84,8 +84,8 @@ public class BenchmarkTest01217 extends HttpServlet {
 		map89502.put("key89502", b89502.toString()); // put in a collection
 		String c89502 = (String)map89502.get("key89502"); // get it back out
 		String d89502 = c89502.substring(0,c89502.length()-1); // extract most of it
-		String e89502 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d89502.getBytes() ) )); // B64 encode and decode it
+		String e89502 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d89502.getBytes() ) )); // B64 encode and decode it
 		String f89502 = e89502.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g89502 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
