@@ -67,8 +67,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map92384.put("key92384", b92384.toString()); // put in a collection
 		String c92384 = (String)map92384.get("key92384"); // get it back out
 		String d92384 = c92384.substring(0,c92384.length()-1); // extract most of it
-		String e92384 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d92384.getBytes() ) )); // B64 encode and decode it
+		String e92384 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d92384.getBytes() ) )); // B64 encode and decode it
 		String f92384 = e92384.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f92384); // reflection
