@@ -106,8 +106,8 @@ public class BenchmarkTest01271 extends HttpServlet {
 		map4086.put("key4086", b4086.toString()); // put in a collection
 		String c4086 = (String)map4086.get("key4086"); // get it back out
 		String d4086 = c4086.substring(0,c4086.length()-1); // extract most of it
-		String e4086 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d4086.getBytes() ) )); // B64 encode and decode it
+		String e4086 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d4086.getBytes() ) )); // B64 encode and decode it
 		String f4086 = e4086.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g4086 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
