@@ -85,8 +85,8 @@ public class BenchmarkTest01309 extends HttpServlet {
 		map9334.put("key9334", b9334.toString()); // put in a collection
 		String c9334 = (String)map9334.get("key9334"); // get it back out
 		String d9334 = c9334.substring(0,c9334.length()-1); // extract most of it
-		String e9334 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d9334.getBytes() ) )); // B64 encode and decode it
+		String e9334 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d9334.getBytes() ) )); // B64 encode and decode it
 		String f9334 = e9334.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g9334 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
