@@ -86,8 +86,8 @@ public class BenchmarkTest01404 extends HttpServlet {
 		map75056.put("key75056", b75056.toString()); // put in a collection
 		String c75056 = (String)map75056.get("key75056"); // get it back out
 		String d75056 = c75056.substring(0,c75056.length()-1); // extract most of it
-		String e75056 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d75056.getBytes() ) )); // B64 encode and decode it
+		String e75056 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d75056.getBytes() ) )); // B64 encode and decode it
 		String f75056 = e75056.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g75056 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
