@@ -85,8 +85,8 @@ public class BenchmarkTest01516 extends HttpServlet {
 		map84214.put("key84214", b84214.toString()); // put in a collection
 		String c84214 = (String)map84214.get("key84214"); // get it back out
 		String d84214 = c84214.substring(0,c84214.length()-1); // extract most of it
-		String e84214 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d84214.getBytes() ) )); // B64 encode and decode it
+		String e84214 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d84214.getBytes() ) )); // B64 encode and decode it
 		String f84214 = e84214.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g84214 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
