@@ -111,8 +111,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map43050.put("key43050", b43050.toString()); // put in a collection
 		String c43050 = (String)map43050.get("key43050"); // get it back out
 		String d43050 = c43050.substring(0,c43050.length()-1); // extract most of it
-		String e43050 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d43050.getBytes() ) )); // B64 encode and decode it
+		String e43050 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d43050.getBytes() ) )); // B64 encode and decode it
 		String f43050 = e43050.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g43050 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
