@@ -3,7 +3,7 @@
 *
 * This file is part of the Open Web Application Security Project (OWASP)
 * Benchmark Project. For details, please see
-* <a href="https://www.owasp.org/index.php/Benchmark">https://www.owasp.org/index.php/Benchmark</a>.
+* <a href="https://owasp.org/www-project-benchmark/">https://owasp.org/www-project-benchmark/</a>.
 *
 * The OWASP Benchmark is free software: you can redistribute it and/or modify it under the terms
 * of the GNU General Public License as published by the Free Software Foundation, version 2.
@@ -12,7 +12,7 @@
 * even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
-* @author Dave Wichers <a href="https://www.aspectsecurity.com">Aspect Security</a>
+* @author Dave Wichers
 * @created 2015
 */
 
@@ -50,41 +50,46 @@ public class BenchmarkTest01569 extends HttpServlet {
 		
 	org.owasp.benchmark.helpers.LDAPManager ads = new org.owasp.benchmark.helpers.LDAPManager();
 	try {
-			response.setContentType("text/html");
-			javax.naming.directory.DirContext ctx = ads.getDirContext();
-			String base = "ou=users,ou=system";
-			javax.naming.directory.SearchControls sc = new javax.naming.directory.SearchControls();
-			sc.setSearchScope(javax.naming.directory.SearchControls.SUBTREE_SCOPE);
-			String filter = "(&(objectclass=person)(uid=" + bar
-					+ "))";
-			// System.out.println("Filter " + filter);
-			javax.naming.NamingEnumeration<javax.naming.directory.SearchResult> results = ctx.search(base, filter, sc);
-			while (results.hasMore()) {
-				javax.naming.directory.SearchResult sr = (javax.naming.directory.SearchResult) results.next();
-				javax.naming.directory.Attributes attrs = sr.getAttributes();
+		response.setContentType("text/html");
+		javax.naming.directory.DirContext ctx = ads.getDirContext();
+		String base = "ou=users,ou=system";
+		javax.naming.directory.SearchControls sc = new javax.naming.directory.SearchControls();
+		sc.setSearchScope(javax.naming.directory.SearchControls.SUBTREE_SCOPE);
+		String filter = "(&(objectclass=person)(uid=" + bar
+				+ "))";
+		// System.out.println("Filter " + filter);
+		boolean found = false;
+		javax.naming.NamingEnumeration<javax.naming.directory.SearchResult> results = ctx.search(base, filter, sc);
+		while (results.hasMore()) {
+			javax.naming.directory.SearchResult sr = (javax.naming.directory.SearchResult) results.next();
+			javax.naming.directory.Attributes attrs = sr.getAttributes();
 
-				javax.naming.directory.Attribute attr = attrs.get("uid");
-				javax.naming.directory.Attribute attr2 = attrs.get("street");
-				if (attr != null){
-					response.getWriter().println(
-"LDAP query results:<br>"
-							+ " Record found with name " + attr.get() + "<br>"
-									+ "Address: " + attr2.get()+ "<br>"
-);
-					// System.out.println("record found " + attr.get());
-				} else response.getWriter().println(
-"LDAP query results: nothing found."
-);
+			javax.naming.directory.Attribute attr = attrs.get("uid");
+			javax.naming.directory.Attribute attr2 = attrs.get("street");
+			if (attr != null) {
+				response.getWriter().println(
+					"LDAP query results:<br>"
+					+ "Record found with name " + attr.get() + "<br>"
+					+ "Address: " + attr2.get()+ "<br>"
+				);
+				// System.out.println("record found " + attr.get());
+				found = true;
 			}
+		}
+		if (!found) {
+			response.getWriter().println(
+				"LDAP query results: nothing found for query: " + org.owasp.esapi.ESAPI.encoder().encodeForHTML(filter)
+			);
+		}
 	} catch (javax.naming.NamingException e) {
 		throw new ServletException(e);
-	}finally{
-    	try {
-    		ads.closeDirContext();
+	} finally {
+		try {
+			ads.closeDirContext();
 		} catch (Exception e) {
 			throw new ServletException(e);
 		}
-    }
+	}
 	}  // end doPost
 
 	
@@ -101,8 +106,8 @@ public class BenchmarkTest01569 extends HttpServlet {
 		map75250.put("key75250", b75250.toString()); // put in a collection
 		String c75250 = (String)map75250.get("key75250"); // get it back out
 		String d75250 = c75250.substring(0,c75250.length()-1); // extract most of it
-		String e75250 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d75250.getBytes() ) )); // B64 encode and decode it
+		String e75250 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d75250.getBytes() ) )); // B64 encode and decode it
 		String f75250 = e75250.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g75250 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
