@@ -94,8 +94,8 @@ public class BenchmarkTest01692 extends HttpServlet {
 		map28453.put("key28453", b28453.toString()); // put in a collection
 		String c28453 = (String)map28453.get("key28453"); // get it back out
 		String d28453 = c28453.substring(0,c28453.length()-1); // extract most of it
-		String e28453 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d28453.getBytes() ) )); // B64 encode and decode it
+		String e28453 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d28453.getBytes() ) )); // B64 encode and decode it
 		String f28453 = e28453.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g28453 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
