@@ -110,8 +110,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map71684.put("key71684", b71684.toString()); // put in a collection
 		String c71684 = (String)map71684.get("key71684"); // get it back out
 		String d71684 = c71684.substring(0,c71684.length()-1); // extract most of it
-		String e71684 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d71684.getBytes() ) )); // B64 encode and decode it
+		String e71684 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d71684.getBytes() ) )); // B64 encode and decode it
 		String f71684 = e71684.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f71684); // reflection
