@@ -89,8 +89,8 @@ public class BenchmarkTest01809 extends HttpServlet {
 		map64594.put("key64594", b64594.toString()); // put in a collection
 		String c64594 = (String)map64594.get("key64594"); // get it back out
 		String d64594 = c64594.substring(0,c64594.length()-1); // extract most of it
-		String e64594 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d64594.getBytes() ) )); // B64 encode and decode it
+		String e64594 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d64594.getBytes() ) )); // B64 encode and decode it
 		String f64594 = e64594.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g64594 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
