@@ -121,8 +121,8 @@ public class BenchmarkTest01844 extends HttpServlet {
 		map37183.put("key37183", b37183.toString()); // put in a collection
 		String c37183 = (String)map37183.get("key37183"); // get it back out
 		String d37183 = c37183.substring(0,c37183.length()-1); // extract most of it
-		String e37183 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d37183.getBytes() ) )); // B64 encode and decode it
+		String e37183 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d37183.getBytes() ) )); // B64 encode and decode it
 		String f37183 = e37183.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g37183 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
