@@ -89,8 +89,8 @@ public class BenchmarkTest01886 extends HttpServlet {
 		map16884.put("key16884", b16884.toString()); // put in a collection
 		String c16884 = (String)map16884.get("key16884"); // get it back out
 		String d16884 = c16884.substring(0,c16884.length()-1); // extract most of it
-		String e16884 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d16884.getBytes() ) )); // B64 encode and decode it
+		String e16884 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d16884.getBytes() ) )); // B64 encode and decode it
 		String f16884 = e16884.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g16884 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
