@@ -91,8 +91,8 @@ public class BenchmarkTest01935 extends HttpServlet {
 		map17785.put("key17785", b17785.toString()); // put in a collection
 		String c17785 = (String)map17785.get("key17785"); // get it back out
 		String d17785 = c17785.substring(0,c17785.length()-1); // extract most of it
-		String e17785 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d17785.getBytes() ) )); // B64 encode and decode it
+		String e17785 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d17785.getBytes() ) )); // B64 encode and decode it
 		String f17785 = e17785.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f17785); // reflection
