@@ -118,8 +118,8 @@ public class BenchmarkTest02003 extends HttpServlet {
 		map69278.put("key69278", b69278.toString()); // put in a collection
 		String c69278 = (String)map69278.get("key69278"); // get it back out
 		String d69278 = c69278.substring(0,c69278.length()-1); // extract most of it
-		String e69278 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d69278.getBytes() ) )); // B64 encode and decode it
+		String e69278 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d69278.getBytes() ) )); // B64 encode and decode it
 		String f69278 = e69278.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g69278 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
