@@ -131,8 +131,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map97712.put("key97712", b97712.toString()); // put in a collection
 		String c97712 = (String)map97712.get("key97712"); // get it back out
 		String d97712 = c97712.substring(0,c97712.length()-1); // extract most of it
-		String e97712 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d97712.getBytes() ) )); // B64 encode and decode it
+		String e97712 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d97712.getBytes() ) )); // B64 encode and decode it
 		String f97712 = e97712.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g97712 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
