@@ -128,8 +128,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map69185.put("key69185", b69185.toString()); // put in a collection
 		String c69185 = (String)map69185.get("key69185"); // get it back out
 		String d69185 = c69185.substring(0,c69185.length()-1); // extract most of it
-		String e69185 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d69185.getBytes() ) )); // B64 encode and decode it
+		String e69185 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d69185.getBytes() ) )); // B64 encode and decode it
 		String f69185 = e69185.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g69185 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
