@@ -69,8 +69,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map96053.put("key96053", b96053.toString()); // put in a collection
 		String c96053 = (String)map96053.get("key96053"); // get it back out
 		String d96053 = c96053.substring(0,c96053.length()-1); // extract most of it
-		String e96053 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d96053.getBytes() ) )); // B64 encode and decode it
+		String e96053 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d96053.getBytes() ) )); // B64 encode and decode it
 		String f96053 = e96053.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g96053 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
