@@ -74,8 +74,8 @@ public class BenchmarkTest02188 extends HttpServlet {
 		map16667.put("key16667", b16667.toString()); // put in a collection
 		String c16667 = (String)map16667.get("key16667"); // get it back out
 		String d16667 = c16667.substring(0,c16667.length()-1); // extract most of it
-		String e16667 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d16667.getBytes() ) )); // B64 encode and decode it
+		String e16667 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d16667.getBytes() ) )); // B64 encode and decode it
 		String f16667 = e16667.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g16667 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
