@@ -88,8 +88,8 @@ public class BenchmarkTest02203 extends HttpServlet {
 		map31470.put("key31470", b31470.toString()); // put in a collection
 		String c31470 = (String)map31470.get("key31470"); // get it back out
 		String d31470 = c31470.substring(0,c31470.length()-1); // extract most of it
-		String e31470 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d31470.getBytes() ) )); // B64 encode and decode it
+		String e31470 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d31470.getBytes() ) )); // B64 encode and decode it
 		String f31470 = e31470.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g31470 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
