@@ -87,8 +87,8 @@ public class BenchmarkTest02242 extends HttpServlet {
 		map91595.put("key91595", b91595.toString()); // put in a collection
 		String c91595 = (String)map91595.get("key91595"); // get it back out
 		String d91595 = c91595.substring(0,c91595.length()-1); // extract most of it
-		String e91595 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d91595.getBytes() ) )); // B64 encode and decode it
+		String e91595 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d91595.getBytes() ) )); // B64 encode and decode it
 		String f91595 = e91595.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g91595 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
