@@ -88,8 +88,8 @@ public class BenchmarkTest02452 extends HttpServlet {
 		map91263.put("key91263", b91263.toString()); // put in a collection
 		String c91263 = (String)map91263.get("key91263"); // get it back out
 		String d91263 = c91263.substring(0,c91263.length()-1); // extract most of it
-		String e91263 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d91263.getBytes() ) )); // B64 encode and decode it
+		String e91263 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d91263.getBytes() ) )); // B64 encode and decode it
 		String f91263 = e91263.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g91263 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
