@@ -89,8 +89,8 @@ org.owasp.esapi.ESAPI.encoder().encodeForHTML(new String(b,0,size))
 		map60326.put("key60326", b60326.toString()); // put in a collection
 		String c60326 = (String)map60326.get("key60326"); // get it back out
 		String d60326 = c60326.substring(0,c60326.length()-1); // extract most of it
-		String e60326 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d60326.getBytes() ) )); // B64 encode and decode it
+		String e60326 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d60326.getBytes() ) )); // B64 encode and decode it
 		String f60326 = e60326.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g60326 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
