@@ -89,8 +89,8 @@ public class BenchmarkTest02539 extends HttpServlet {
 		map9290.put("key9290", b9290.toString()); // put in a collection
 		String c9290 = (String)map9290.get("key9290"); // get it back out
 		String d9290 = c9290.substring(0,c9290.length()-1); // extract most of it
-		String e9290 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d9290.getBytes() ) )); // B64 encode and decode it
+		String e9290 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d9290.getBytes() ) )); // B64 encode and decode it
 		String f9290 = e9290.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g9290 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
