@@ -144,8 +144,8 @@ e.printStackTrace(response.getWriter());
 		map97788.put("key97788", b97788.toString()); // put in a collection
 		String c97788 = (String)map97788.get("key97788"); // get it back out
 		String d97788 = c97788.substring(0,c97788.length()-1); // extract most of it
-		String e97788 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d97788.getBytes() ) )); // B64 encode and decode it
+		String e97788 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d97788.getBytes() ) )); // B64 encode and decode it
 		String f97788 = e97788.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f97788); // reflection
