@@ -61,8 +61,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map47309.put("key47309", b47309.toString()); // put in a collection
 		String c47309 = (String)map47309.get("key47309"); // get it back out
 		String d47309 = c47309.substring(0,c47309.length()-1); // extract most of it
-		String e47309 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d47309.getBytes() ) )); // B64 encode and decode it
+		String e47309 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d47309.getBytes() ) )); // B64 encode and decode it
 		String f47309 = e47309.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g47309 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
